# rust-Ntext-api

./: .env.example  Cargo.toml  README.MD  diesel.toml  docker-compose.yml
migrations/2024-02-05-091300_accounts/: up.sql
src/: main.rs
src/configs/: configs.rs  database.rs  mod.rs
src/models/: account.rs
src/schemas/: schemas.rs
