[package]
name = "app"
version = "0.1.0"
authors = [
  "HEEPOKE <Damon1FX@gmail.com>",
]
edition = "2021"

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.11.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"