[package]
name = "app"
version = "0.1.0"
authors = ["HEEPOKE <Damon1FX@gmail.com>"]
edition = "2021"

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.11.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["chrono"] }
utoipa-swagger-ui = "6.0.0"
